--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,18 @@ services:
     volumes:
       - ./front:/front
     ports:
-      - 3000:3000
+      - 8080:8080
     command: npm run start
     tty: true 
+    stdin_open: true
+
+  api:
+    build: ./api
+    container_name: fastapi
+    volumes:
+      - ./api:/api
+    ports:
+      - 3000:3000
+    command: uvicorn main:app --reload --host 0.0.0.0 --port 3000
+    tty: true
     stdin_open: true
